syncdoc-core/tests/snapshots/patterns__basic_function.snap
---
source: syncdoc-core/tests/patterns.rs
expression: "apply_doc_injection(input, \"../docs\")"
---
# [doc = include_str ! ("../docs/hello.md")]
fn hello() {
    println!("world");
}
