syncdoc-core/tests/snapshots/patterns__const_function.snap
---
source: syncdoc-core/tests/patterns.rs
expression: "test_with_code(\"test_const_function_pattern\", code)"
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
const fn hello() -> i32 {
    42
}
