syncdoc-core/tests/snapshots/patterns__extern_c_function.snap
---
source: syncdoc-core/tests/patterns.rs
expression: "apply_doc_injection(input, \"../docs\")"
---
# [doc = include_str ! ("../docs/hello.md")]
extern "C" fn hello() {
    println!("world");
}
