syncdoc-core/tests/snapshots/patterns__impl_block_methods.snap
---
source: syncdoc-core/tests/patterns.rs
expression: "test_with_code(\"test_impl_block_methods_pattern\", code)"
---
#![doc = include_str!("../docs/lib.md")]



use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

struct MyStruct;

impl MyStruct {
    fn method(&self) {
        println!("method");
    }

    pub async fn async_method(&mut self) -> i32 {
        42
    }

    unsafe fn unsafe_method() {
        println!("unsafe");
    }
}
