syncdoc-core/tests/snapshots/patterns__mixed_content_with_functions.snap
---
source: syncdoc-core/tests/patterns.rs
expression: "test_with_code(\"test_mixed_content_with_functions\", code)"
---
#![doc = include_str!("../docs/lib.md")]

use syncdoc::omnidoc;

#[omnidoc(path = "docs")]
use std::collections::HashMap;

const SOME_CONST: i32 = 42;

struct MyStruct {
    field: String,
}

async fn actual_function() {
    println!("This should be documented");
}

enum MyEnum {
    Variant1,
    Variant2(i32),
}

pub unsafe fn another_function() -> Result<(), String> {
    Ok(())
}

type MyType = HashMap<String, i32>;
