syncdoc-core/tests/snapshots/patterns__pub_async_function.snap
---
source: syncdoc-core/tests/patterns.rs
expression: "apply_doc_injection(input, \"../docs\")"
---
# [doc = include_str ! ("../docs/hello.md")]
pub async fn hello() {
    println!("world");
}
