syncdoc-core/tests/snapshots/patterns__pub_crate_function.snap
---
source: syncdoc-core/tests/patterns.rs
expression: "test_with_code(\"test_pub_crate_function\", code)"
---
#![doc = include_str!("../docs/lib.md")]

use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

pub(crate) fn hello() {
    println!("world");
}
