syncdoc-core/tests/snapshots/patterns__trait_methods.snap
---
source: syncdoc-core/tests/patterns.rs
expression: "test_with_code(\"test_trait_methods_pattern\", code)"
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
trait MyTrait {
    fn required_method(&self);

    async fn async_trait_method(&self) -> String {
        "default".to_string()
    }

    unsafe fn unsafe_trait_method();

    fn regular_trait_method() -> i32 {
        0
    }
}
