syncdoc-core/tests/snapshots/patterns__unsafe_function.snap
---
source: syncdoc-core/tests/patterns.rs
expression: "test_with_code(\"test_unsafe_function_pattern\", code)"
---
#![doc = include_str!("../docs/lib.md")]



use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

unsafe fn hello() {
    println!("world");
}
